--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
+  top: 0px;
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  position: absolute;
+  min-width: 100vw;
 }
 
 .App-logo {
